Fixed JRE 1.8 support